adjust defaults, fix bst tests